Replace 'new Locale()' with 'Locale.of()'